Final version for the assignment

--- a/HARExercisePrediction.Rmd
+++ b/HARExercisePrediction.Rmd
@@ -14,9 +14,9 @@ For this project we will use the HAR dataset (http://groupware.les.inf.puc-rio.b
 
 
 ## Data Clean Up and Preparation
-We first clean up the data by removing rows invalid values (NA or "#DIV/0!"). We also remove columns that can't be used as predictors.
+We first clean up the data by removing rows with invalid values (NA or "#DIV/0!") as these will cause issues with some of of the models. We also remove columns that can't be used as predictors.
  
-```{r pressure, echo=FALSE}
+```{r}
 har_raw <- read.csv("https://d396qusza40orc.cloudfront.net/predmachlearn/pml-training.csv")
 
 prepare_data <- function(data) {
@@ -40,7 +40,7 @@ probing <- har[-inTrain,]
 ```
 
 
-# Exploratory Analysis
+## Exploratory Analysis
 
 We plot a couple of charts to get a feel for whether there are any predictors that can be used to determine whether the exercise is done well
 
@@ -51,9 +51,9 @@ ggplot(training, aes(x = classe, y = pitch_arm, fill = classe)) + geom_boxplot()
 ```
 
 
-# Model Selction
+## Model Selction
 
-We fit 3 different models on the training set (descision tree, random forest and linear discriminant analysis). Each model uses all the variables retained in training set to try to predict the value of the classe variable. We will select the model with the best accuracy.
+We fit 3 different models on the training set (descision tree, random forest and linear discriminant analysis). Each model uses all the variables retained in training set to try to predict the value of the "classe"" variable. We will select the model with the best accuracy.
 
 ```{r cache=TRUE, message=FALSE}
 modelRpart <- train(classe ~ ., training, method = "rpart")
@@ -61,9 +61,9 @@ modelRF <- train(classe ~ ., training, method = "rf")
 modelLDA <- train(classe ~ ., training, method = "lda")
 ```
 
-We test each model on the probing set. The most accurate model seems to be the one using random forest with an accuracy of 99.27%. This is therefore the model we are going to use.
+We test each model on the probing set. The most accurate model seems to be the one using random forest with an accuracy of 99.33%. This is therefore the model we are going to use.
 
-```{r}
+```{r message=FALSE}
 cmRpart <- confusionMatrix(predict(modelRpart, probing), probing$classe)
 cmRpart$overall[["Accuracy"]]
 
@@ -75,10 +75,9 @@ cmLDA$overall[["Accuracy"]]
 
 ```
 
-The out of sample error for that model is 0.73%
-```{r}
+The out of sample error for that model is 0.67%
+```{r message=FALSE}
 cm <- confusionMatrix(predict(modelRF, probing), probing$classe)
-oose <- 1 - cm$overall[["Accuracy"]]
-oose
+error <- 1 - cm$overall[["Accuracy"]]
+error
 ```
-
